# sfml_biblioteka_clion

./: CMakeLists.txt  README.md  main.cpp
